# recommendation_system_api

./: pyproject.toml
src/recommendation_system/: __init__.py  db.sqlite3
src/recommendation_system/core_api/: settings.py  urls.py
src/recommendation_system/movies/: models.py
src/recommendation_system/movies/migrations/: 0001_initial.py
