[project]
name = "recommendation-system"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mtdk.mitthu", email = "mtdkmitthu@gmail.com" }
]
dependencies = [
    "django>=5.2.8",
    "djangorestframework>=3.16.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.14.6",
    "mypy>=1.18.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/recommendation_system"]
